# docs/swagger/swagger.yaml
@@ -2586,37 +2586,6 @@ definitions:
       window_width:
         type: integer
     type: object
-  github_com_javinizer_javinizer-go_internal_models.CreditCollision:
-    properties:
-      canonical_value:
-        type: string
-      created_at:
-        type: string
-      credit_id:
-        type: integer
-      field:
-        type: string
-      id:
-        type: integer
-      last_seen_at:
-        type: string
-      movie_content_id:
-        type: string
-      occurrences:
-        type: integer
-      reported_value:
-        type: string
-      resolution:
-        type: string
-      sources_seen:
-        type: string
-      status:
-        type: string
-      updated_at:
-        type: string
-      user_pinned:
-        type: boolean
-    type: object
   github_com_javinizer_javinizer-go_internal_models.CropBounds:
     properties:
       height:
@@ -3165,8 +3134,43 @@ definitions:
     properties:
       collisions:
         items:
-          $ref: '#/definitions/github_com_javinizer_javinizer-go_internal_models.CreditCollision'
+          $ref: '#/definitions/internal_api_actress.collisionResponse'
         type: array
+    type: object
+  internal_api_actress.collisionResponse:
+    properties:
+      allowed_resolutions:
+        items:
+          type: string
+        type: array
+      canonical_value:
+        type: string
+      created_at:
+        type: string
+      credit_id:
+        type: integer
+      field:
+        type: string
+      id:
+        type: integer
+      last_seen_at:
+        type: string
+      movie_content_id:
+        type: string
+      occurrences:
+        type: integer
+      reported_value:
+        type: string
+      resolution:
+        type: string
+      sources_seen:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+      user_pinned:
+        type: boolean
     type: object
   internal_api_desktop.upgradeRequest:
     properties:
